# L5-Haskell

./: .gitignore  .travis.yml  README.md  l.cabal  l3.txt  lc  linterp  talk_outline.txt  warnings.txxt
backups/: 2.L1  2.L2  2.L3  2.S  alloc-64.L1  alloc.L1  bad-spill.L1  bad-spill.L2  failing-6.L4
executables/: LC.hs  LExecNative.hs  LInterp.hs
executables/other/: Interference.hs
mains/l1/: Main.hs
mains/l132/: Main.hs
mains/l164/: Main.hs
mains/l1Interp/: Main.hs
mains/l2/: Main.hs
mains/l2Interp/: Main.hs
mains/liveness/: Main.hs
playground/: D.hs
properties/: L1Tests.hs  properties.hs
src/: L.hs
src/L/: CommandLine.hs  CompilationUnit.hs  Compiler.hs  CompilerWithThrists.hs  Computer.hs  IOHelpers.hs  L.hs  L1L2AST.hs  L1L2MainAdjuster.hs  L1L2Parser.hs  LCompiler.hs  Memory.hs  NativeRunner.hs  OS.hs  Primitives.hs  Read.hs  Registers.hs  ReplTools.hs  Runners.hs  SExpr.hs  Supply.hs  Testhelpers.hs  Utils.hs  Variable.hs
src/L/Interpreter/: ComputationResult.hs  Computer.hs  HOComputer.hs  Memory.hs  Output.hs  Runtime.hs  X86Computer.hs
src/L/L1/: L1-Grammar.txt  L1.hs  L132.hs  L164.hs  L1Interp.hs  L1L2AST.hs  L1L2MainAdjuster.hs  L1X86.hs  MainAdjuster.hs
src/L/L2/: Allocation.hs  Interference.hs  L2.hs  L2Grammar.txt  L2Interp.hs  Liveness.hs  Spill.hs  Vars.hs
src/L/L3/: L3-Grammar.txt  L3.hs  L3AST.hs  L3Interp.hs  L3Parser.hs  Linearize.hs
src/L/L4/: ANormalize.hs  L4-Grammar.txt  L4.hs  L4AST.hs  L4Interp.hs  L4Parser.hs
src/L/L5/: L5.hs  L5AST.hs  L5Core.hs  L5Interp.hs  L5Parser.hs  LambdaLifter.hs
src/L/Parser/: SExpr.hs  Supply.hs
src/L/Util/: IOHelpers.hs  NativeRunner.hs  Utils.hs
test/: L1Tests.hs  LProperties.hs  LTests.hs  LUnitTests.hs  main.hs
test/test-fest/1-test/cough/1-test/: add-two-registers.S  allocate-size-1-array.S  allocate-size-1000-array.S  allocate-size-2-array.S  assign-register-to-label.L1  assign-register-to-label.S  call-function.S  cjump-on-registers.L1  cjump-on-registers.S  compare-negs.L1  compare-negs.S  double-decrement.L1  double-decrement.S  fun-with-arrays-part-2.L1  fun-with-arrays-part-2.S  fun-with-arrays.L1  fun-with-arrays.S  gotos.S  labels-fun.S  more-compares-with-numbers.S  neg.S  print-eax-twice.S  print-eax.S  print-one.L1  print-zero.S  shifts.S  simple-cjump-false.S  simple-cjump-truth.S  simple-decrement.S  simple-increment-eax.L1  simple-increment-eax.S  simple-mem-read.L1  simple-mem-read.S  simple-mem-write.L1  simple-mem-write.S  simple-mult-2.L1  simple-mult-2.S  simple-mult.S  simple-stack-stuff.L1  simple-stack-stuff.S  (+2 more)
test/test-fest/1-test/fetscher/1-test/: test1.L1  test1.S  test10.L1  test10.S  test11.L1  test11.S  test12.L1  test12.S  test13.L1  test13.S  test14.L1  test14.S  test15.L1  test15.S  test16.L1  test16.S  test17.L1  test17.S  test18.L1  test18.S  test19.L1  test19.S  test20.L1  test20.S  test22.L1  test22.S  test23.L1  test23.S  test24.L1  test24.S  test25.L1  test25.S  test3.L1  test3.S  test4.L1  test4.S  test5.L1  test5.S  test6.L1  test6.S  (+5 more)
test/test-fest/1-test/gocke+stein/1-test/: 32bit.L1  32bit.S  accumulator.L1  accumulator.S  ackermann.L1  ackermann.S  add.L1  add.S  arith.L1  arith.S  break.L1  break.S  deadbeef.L1  deadbeef.S  deadcode.L1  deadcode.S  decode.L1  decode.S  fact.L1  fact.S  fizz.L1  fizz.S  for.L1  for.S  len.L1  len.S  logic.L1  logic.S  mask.L1  mask.S  neg.L1  neg.S  nshift.L1  nshift.S  overflow.L1  overflow.S  powertower.L1  powertower.S  rewriter.L1  rewriter.S  (+10 more)
test/test-fest/1-test/greene/1-test/: call_all.L1  call_all.S  equal.S  fun3_of3.S  function.L1  function.S  jump.S  less.L1  less.S  less_equal.L1  less_equal.S  loop.L1  loop.S  mem0.S  mem1.L1  mem1.S  mem_all.L1  mem_all.S  multifun.S  multiprint.L1  multiprint.S  no_jump.S  not_equal.L1  not_equal.S  not_less.L1  not_less.S  not_less_equal.S  shift_l.L1  shift_l.S  shift_r.L1  shift_r.S  simple_add.L1  simple_add.S  simple_and.L1  simple_and.S  simple_mult.L1  simple_mult.S  simple_sub.L1  simple_sub.S  tail-call.S
test/test-fest/1-test/hill/1-test/: test01.L1  test01.S  test02.L1  test02.S  test03.L1  test03.S  test04.L1  test04.S  test05.L1  test05.S  test06.L1  test06.S  test07.L1  test07.S  test08.L1  test08.S  test09.L1  test09.S  test10.L1  test10.S  test11.L1  test11.S  test12.L1  test12.S  test13.L1  test13.S  test14.L1  test14.S  test15.L1  test15.S  test16.L1  test16.S  test17.L1  test17.S  test18.L1  test18.S  test19.L1  test19.S  test20.L1  test20.S  (+10 more)
test/test-fest/1-test/jin/1-test/: test1.L1  test1.S  test10.L1  test10.S  test11.L1  test11.S  test12.L1  test12.S  test13.L1  test13.S  test14.L1  test14.S  test15.L1  test15.S  test16.L1  test16.S  test17.L1  test17.S  test18.L1  test18.S  test18.res  test19.L1  test19.S  test20.L1  test20.S  test21.L1  test21.S  test22.L1  test22.S  test23.L1  test23.S  test24.L1  test24.S  test25.L1  test25.S  test3.S  test3.bak  test4.L1  test4.S  test5.L1  (+10 more)
test/test-fest/1-test/kim+steinfeld/1-test/: test1.L1  test1.S  test10.L1  test10.S  test11.L1  test11.S  test12.L1  test12.S  test13.L1  test13.S  test14.L1  test14.S  test15.L1  test15.S  test16.L1  test16.S  test17.L1  test17.S  test18.L1  test18.S  test19.L1  test19.S  test20.L1  (+25 more)
test/test-fest/2-test/: .gitignore
test/test-fest/3-test/cough/: array-set.L3  closure-vars.L3  funcall.L3  hof-w-let.L3  print.L3  test2.L3  test4.L3
test/test-fest/4-test/cough/: 1.L4  2.L4  5.L4  6.L4  7.L4  7.L4.L3  7.L4.L3.L2  7.L4.L3.bak  8.L4
test/x86-64-tests/: add-two-registers.L1  allocate-size-1-array.L1  allocate-size-1000-array.L1  allocate-size-2-array.L1  call-function.L1  cjump-on-registers.L1  compare-negs.L1  double-decrement.L1  fun-with-arrays-part-2.L1  fun-with-arrays.L1  gotos.L1  labels-fun.L1  more-compares-with-numbers.L1  neg.L1  print-eax-twice.L1  print-eax.L1  print-one.L1  print-zero.L1  runtime.c  shifts-all.L1  shifts.L1  simple-cjump-false.L1  simple-cjump-truth.L1  simple-decrement.L1  simple-increment-eax.L1  simple-mem-read.L1  simple-mem-write.L1  simple-mult-2.L1  simple-mult.L1  simple-stack-stuff.L1  use-stack-pointer.L1
(+5437 files in other folders)
