-- documentation, see http://haskell.org/cabal/users-guide/

name:                l
version:             0.1.0.0
synopsis:            A compiler written in Haskell
-- description:         
homepage:            https://github.com/joshcough/L5-Haskell
license:             MIT
license-file:        LICENSE
author:              Josh Cough
maintainer:          joshcough@gmail.com
-- copyright:           
category:            Languages
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type: git
  location: git@github.com:joshcough/L5-Haskell.git

-- `cabal install --enable-tests -f-tests` to disable tests suite
flag tests
  manual: True
  default: True

library
  hs-source-dirs: src

  exposed-modules:
    L.CommandLine
    L.Compiler
    L.Computer
    L.IOHelpers
    L.L1L2AST
    L.L1L2Parser
    L.NativeRunner
    L.OS
    L.Read
    L.Utils
    -- L1
    L.L1.L1
    L.L1.L1Interp
    L.L1.L1X86
    L.L1.MainAdjuster
    -- L2
    L.L2.Allocation
    L.L2.Interference
    L.L2.L2
    L.L2.L2Interp
    L.L2.Liveness
    L.L2.Spill
    L.L2.Vars
    -- L3
    L.L3.L3
    L.L3.L3AST
    L.L3.L3Parser
    L.L3.Linearize
    -- L4
    L.L4.ANormalize
    L.L4.L4
    L.L4.L4AST
    L.L4.L4Parser
    -- L5
    L.L5.L5AST
    --L.L5.L5Core
    L.L5.L5Interp

  build-depends:
    array                     >= 0.3.0.2 && < 0.6,
    base                      >= 4       && < 5,
    bound                     >= 1.0.3,
    bytestring                >= 0.10.4.0,
    charset                   >= 0.3     && < 1,
    containers                >= 0.3     && < 0.6,
    directory                 >= 1.2.0.1,
    --ermine                    >= 0.6,
    filepath                  >= 1.3     && < 1.4,
    lens                      >= 4,
    mtl                       >= 2,
    parsers                   >= 0.12.1.1, 
    process                   >= 1.1.0.2,
    optparse-applicative      >= 0.10.0,
    text                      >= 1.1.1.1,
    transformers              >= 0.2     && < 0.5,
    trifecta                  >= 1.5.1,
    semigroups                >= 0.8.3.1 && < 1,
    unordered-containers      >= 0.2.5.0,
    utf8-string               >= 0.3.6   && < 0.4,
    vector                    >= 0.10.0.1,
    void                      >= 0.6.1

-- compile any .Ln file (where n is a number).
executable lc
  hs-source-dirs: executables
  main-is: LC.hs
  build-depends: 
    base < 5, 
    directory >= 1.2.0.1, 
    l, 
    mtl >= 2,
    optparse-applicative >= 0.10.0

-- interpreter for any .Ln file (where n is a number).
executable linterp
  hs-source-dirs: executables
  main-is: LInterp.hs
  build-depends:
    base < 5,
    directory >= 1.2.0.1,
    l,
    mtl >= 2,
    optparse-applicative >= 0.10.0

-- native runner for any .Ln file (where n is a number).
executable lexec
  hs-source-dirs: executables
  main-is: LExecNative.hs
  build-depends:
    base < 5,
    directory >= 1.2.0.1,
    l,
    mtl >= 2,
    optparse-applicative >= 0.10.0

-- executable for .S files
executable x64
  hs-source-dirs: executables
  main-is: X64.hs
  build-depends: base < 5, directory >= 1.2.0.1, l, mtl >= 2

-- executable for Liveness
executable LivenessMain
 hs-source-dirs: executables/other/liveness
 main-is: Main.hs
 build-depends: base < 5, directory >= 1.2.0.1, l, mtl >= 2

-- executable for Interference
executable InterferenceMain
 hs-source-dirs: executables/other/interference
 main-is: Main.hs
 build-depends: base < 5, directory >= 1.2.0.1, l, mtl >= 2

test-suite tests
  type:           exitcode-stdio-1.0
  main-is:        test/main.hs
  hs-source-dirs: . test
  other-modules:
    LUnitTests

  if !flag(tests)
    buildable: False
  else
    build-depends:
      base,
      directory                  >= 1.2.0.1,
      HUnit,
      l,
      test-framework             >= 0.6,
      test-framework-hunit,
      test-framework-quickcheck2 >= 0.2,
      test-framework-th          >= 0.2
