-- documentation, see http://haskell.org/cabal/users-guide/

name:                l
version:             0.1.0.0
synopsis:            Compilers and Interepters for the L5-L1 Languages.
description:         L5 is a scheme-like language. This project provides implementations of compilers and interpreters for L5 and it's sub-languages L4-L1.
homepage:            https://github.com/joshcough/L5-Haskell
license:             MIT
license-file:        LICENSE
author:              Josh Cough
maintainer:          joshcough@gmail.com
copyright:           Copyright (C) 2014 Joshua D. Cough
category:            Languages
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type: git
  location: git@github.com:joshcough/L5-Haskell.git

-- `cabal install --enable-tests -f-tests` to disable tests suite
flag tests
  manual: True
  default: True

library
  hs-source-dirs: src
  ghc-options: -Wall -fno-warn-name-shadowing

  exposed-modules:

    -- Common Code
    L.CommandLine
    L.Compiler
    L.Computer
    L.IOHelpers
    L.L1L2AST
    L.L1L2MainAdjuster
    L.L1L2Parser
    L.NativeRunner
    L.OS
    L.Read
    L.ReplTools
    L.Utils

    -- L1
    L.L1.L1
    L.L1.L1Interp
    L.L1.L1X86

    -- L2
    L.L2.Allocation
    L.L2.Interference
    L.L2.L2
    L.L2.L2Interp
    L.L2.Liveness
    L.L2.Spill
    L.L2.Vars

    -- L3
    L.L3.L3
    L.L3.L3AST
    L.L3.L3Interp
    L.L3.L3Parser
    L.L3.Linearize

    -- L4
    L.L4.ANormalize
    L.L4.L4
    L.L4.L4AST
    L.L4.L4Parser

    -- L5
    L.L5.L5AST
    --L.L5.L5Core
    L.L5.L5Interp

  build-depends:
    array                     >= 0.3.0.2 && < 0.6,
    base                      >= 4       && < 5,
    bifunctors                >= 4.1.1.1,
    bound                     >= 1.0.3,
    bytestring                >= 0.10.4.0,
    charset                   >= 0.3     && < 1,
    containers                >= 0.3     && < 0.6,
    data-default              >= 0.5.3,
    directory                 >= 1.2.0.1,
    either                    >= 4.3.1,
    --ermine                    >= 0.6,
    lens                      >= 4.4,
    monad-st                  >= 0.2.4,
    mtl                       >= 2,
    optparse-applicative      >= 0.10.0,
    parsers                   >= 0.12.1.1,
    primitive                 >= 0.5.3.0,
    process                   >= 1.1.0.2,
    text                      >= 1.1.1.1,
    transformers              >= 0.2     && < 0.5,
    trifecta                  >= 1.5.1,
    semigroups                >= 0.8.3.1 && < 1,
    unordered-containers      >= 0.2.5.0,
    utf8-string               >= 0.3.6   && < 0.4,
    utility-ht                >= 0.0.10,
    vector                    >= 0.10.0.1,
    void                      >= 0.6.1

-- compile any .Ln file (where n is a number).
-- will also run the result natively by supplying the -x flag (including .S files)
executable lc
  hs-source-dirs: executables
  main-is: LC.hs
  build-depends: 
    base < 5, 
    directory >= 1.2.0.1, 
    l,
    lens      >= 4.4,
    mtl       >= 2,
    optparse-applicative >= 0.10.0

-- interpreter for any .Ln file (where n is a number).
executable linterp
  hs-source-dirs: executables
  main-is: LInterp.hs
  build-depends:
    base < 5,
    directory >= 1.2.0.1,
    l,
    mtl >= 2,
    optparse-applicative >= 0.10.0

-- executable for Liveness
executable liveness
 hs-source-dirs: executables/other
 main-is: Liveness.hs
 build-depends: base < 5, directory >= 1.2.0.1, l, mtl >= 2

-- executable for Interference
executable interference
 hs-source-dirs: executables/other
 main-is: Interference.hs
 build-depends: base < 5, directory >= 1.2.0.1, l, mtl >= 2

test-suite tests
  type:           exitcode-stdio-1.0
  main-is:        test/main.hs
  hs-source-dirs: . test
  other-modules:
    LUnitTests

  if !flag(tests)
    buildable: False
  else
    build-depends:
      base,
      directory                  >= 1.2.0.1,
      data-default               >= 0.5.3,
      filemanip                  >= 0.3.6.2,
      HUnit,
      l,
      lens                       >= 4.4,
      test-framework             >= 0.6,
      test-framework-hunit,
      test-framework-quickcheck2 >= 0.2,
      test-framework-th          >= 0.2
