-- documentation, see http://haskell.org/cabal/users-guide/

name:                l
version:             0.1.0.0
synopsis:            Compilers and Interepters for the L5-L1 Languages.
description:         L5 is a scheme-like language. This project provides implementations of compilers and interpreters for L5 and it's sub-languages L4-L1.
homepage:            https://github.com/joshcough/L5-Haskell
license:             MIT
license-file:        LICENSE
author:              Josh Cough
maintainer:          joshcough@gmail.com
copyright:           Copyright (C) 2014 Joshua D. Cough
category:            Languages
build-type:          Simple
cabal-version:       >=1.22

source-repository head
  type: git
  location: git@github.com:joshcough/L5-Haskell.git

-- `cabal install --enable-tests -f-tests` to disable tests suite
flag tests
  manual: True
  default: True

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall -fno-warn-name-shadowing

  exposed-modules:

    L

    -- Common Code
    L.CommandLine
    L.Compiler
    L.OS
    L.Registers
    L.Runners
    L.ReplTools
    L.Primitives
    L.Variable

    -- Interpreter Code
    L.Interpreter.ComputationResult
    L.Interpreter.Memory
    L.Interpreter.HOComputer
    L.Interpreter.Output
    L.Interpreter.Runtime
    L.Interpreter.X86Computer

    -- Parser
    L.Parser.SExpr
    L.Parser.Supply

    -- Util
    L.Util.IOHelpers
    L.Util.NativeRunner
    L.Util.Utils

    -- L1
    L.L1.L1
    L.L1.L1Interp
    L.L1.L1L2AST
    L.L1.L1L2MainAdjuster
    L.L1.L1X86

    -- L2
    L.L2.Allocation
    L.L2.Interference
    L.L2.L2
    L.L2.L2Interp
    L.L2.Liveness
    L.L2.Spill
    L.L2.Vars

    -- L3
    L.L3.L3
    L.L3.L3AST
    L.L3.L3Interp
    L.L3.Linearize

    -- L4
    L.L4.ANormalize
    L.L4.L4
    L.L4.L4AST
    L.L4.L4Interp

    -- L5
    L.L5.L5
    L.L5.L5AST
    L.L5.L5Interp
    L.L5.LambdaLifter

  build-depends: array
               , base
               , bifunctors
               , bytestring
               , charset
               , containers
               , data-default
               , directory
               , either
               , lens
               , monad-st
               , mtl
               , optparse-applicative
               , parsers
               , prelude-extras
               , primitive
               , process
               , text
               , thrist
               , transformers
               , trifecta
               , semigroups
               , unordered-containers
               , utf8-string
               , utility-ht
               , vector
               , void

-- compile any .Ln file (where n is a number).
-- will also run the result natively by supplying the -x flag (including .S files)
executable lc
  default-language: Haskell2010
  hs-source-dirs: executables
  main-is: LC.hs
  build-depends: base >= 4.7 && < 5
               , directory
               , l
               , lens
               , mtl
               , optparse-applicative

-- interpreter for any .Ln file (where n is a number).
executable linterp
  default-language: Haskell2010
  hs-source-dirs: executables
  main-is: LInterp.hs
  build-depends: base >= 4.7 && < 5
               , directory
               , l
               , lens
               , mtl
               , optparse-applicative

-- executable for Liveness
executable liveness
 default-language: Haskell2010
 hs-source-dirs: executables/other
 main-is: Liveness.hs
 build-depends: base >= 4.7 && < 5, directory, l

-- executable for Interference
executable interference
  default-language: Haskell2010
 hs-source-dirs: executables/other
 main-is: Interference.hs
 build-depends: base >= 4.7 && < 5, directory, l, mtl

test-suite tests
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  main-is:        test/main.hs
  hs-source-dirs: . test
  other-modules:
    LUnitTests

  if !flag(tests)
    buildable: False
  else
    build-depends: base >= 4.7 && < 5
                 , directory
                 , data-default
                 , filemanip
                 , HUnit
                 , l
                 , lens
                 , test-framework
                 , test-framework-hunit
                 , test-framework-quickcheck2
                 , test-framework-th

